--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,15 @@
     <string name="appointments.menu.action.signoff">Log out</string>
     <string name="appointments.error.message">Error: %s</string>
     <string name="main.menu.action.logout">Log out</string>
+
+
+    <string name="addappointments.title.newAppointment">New Appointment</string>
+    <string name="addappointments.title.modifiedAppointment">Modified Appointment</string>
+    <string name="addappointment.message.patient">Introduce patient name</string>
+    <string name="addappointment.message.accept">Accept</string>
+    <string name="addappointment.message.time">HH:MM</string>
+    <string name="addappointment.message.date">DD/MM/YYYY</string>
+    <string name="addappointment.message.address">Address</string>
+    <string name="addappointments.error.addapointment">Could not add appointment: %s</string>
+    <string name="addappointments.error.datetime">Incorrect date format or time format</string>
 </resources>
